{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 82,
  "lineage": "a582d44e-0af2-831f-a789-17892d368503",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:603480426027:security-group/sg-00b68013d8f504b4f",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-00b68013d8f504b4f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-019e682a15406ad22"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "jenkins-bluegreen-cluster-2025071414303225580000000d",
            "name_prefix": "jenkins-bluegreen-cluster-",
            "owner_id": "603480426027",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "jenkins-bluegreen",
              "Environment": "development",
              "Name": "jenkins-bluegreen-cluster"
            },
            "tags_all": {
              "Application": "jenkins-bluegreen",
              "Environment": "development",
              "Name": "jenkins-bluegreen-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d7f66dbcc350d70a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:603480426027:security-group/sg-019e682a15406ad22",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-019e682a15406ad22",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0a2aecf1645b0178c"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00b68013d8f504b4f"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00b68013d8f504b4f"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00b68013d8f504b4f"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00b68013d8f504b4f"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00b68013d8f504b4f"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00b68013d8f504b4f"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "jenkins-bluegreen-node-2025071414303126620000000c",
            "name_prefix": "jenkins-bluegreen-node-",
            "owner_id": "603480426027",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "jenkins-bluegreen",
              "Environment": "development",
              "Name": "jenkins-bluegreen-node",
              "kubernetes.io/cluster/jenkins-bluegreen": "owned"
            },
            "tags_all": {
              "Application": "jenkins-bluegreen",
              "Environment": "development",
              "Name": "jenkins-bluegreen-node",
              "kubernetes.io/cluster/jenkins-bluegreen": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d7f66dbcc350d70a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-2425725246",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00b68013d8f504b4f",
            "security_group_rule_id": "sgr-0d7cd6e20b35a4d42",
            "self": false,
            "source_security_group_id": "sg-019e682a15406ad22",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-26974858",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-019e682a15406ad22",
            "security_group_rule_id": "sgr-02a373655d9b39489",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1814377238",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-019e682a15406ad22",
            "security_group_rule_id": "sgr-06c103e3b9aa6491d",
            "self": false,
            "source_security_group_id": "sg-00b68013d8f504b4f",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-1885913325",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-019e682a15406ad22",
            "security_group_rule_id": "sgr-0d637bde21266b42d",
            "self": false,
            "source_security_group_id": "sg-00b68013d8f504b4f",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-3106580347",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-019e682a15406ad22",
            "security_group_rule_id": "sgr-0a7dd2d83b9751c28",
            "self": false,
            "source_security_group_id": "sg-00b68013d8f504b4f",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-2859899738",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-019e682a15406ad22",
            "security_group_rule_id": "sgr-0b7dba8e1094a638c",
            "self": false,
            "source_security_group_id": "sg-00b68013d8f504b4f",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-3470239889",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-019e682a15406ad22",
            "security_group_rule_id": "sgr-0cc098d0ed8aae765",
            "self": false,
            "source_security_group_id": "sg-00b68013d8f504b4f",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-418550014",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-019e682a15406ad22",
            "security_group_rule_id": "sgr-0958c168bbb5a6c4c",
            "self": false,
            "source_security_group_id": "sg-00b68013d8f504b4f",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-1261822519",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-019e682a15406ad22",
            "security_group_rule_id": "sgr-05d4e774a1c34fff8",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2276972607",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-019e682a15406ad22",
            "security_group_rule_id": "sgr-0734865a99eff9369",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-602438608",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-019e682a15406ad22",
            "security_group_rule_id": "sgr-0ccaf36a41cf85121",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:603480426027:network-acl/acl-00001d802eac15e23",
            "default_network_acl_id": "acl-00001d802eac15e23",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-00001d802eac15e23",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "603480426027",
            "subnet_ids": [
              "subnet-00225f3dc11fd7a19",
              "subnet-02f11a0a1a78f1f0d",
              "subnet-0565e51c6cd365bda",
              "subnet-07977608bc61ec680",
              "subnet-0921b04341b1485e0",
              "subnet-0a24a61fff8e16c11"
            ],
            "tags": {
              "Name": "jenkins-bluegreen-vpc-default",
              "kubernetes.io/cluster/jenkins-bluegreen": "shared"
            },
            "tags_all": {
              "Name": "jenkins-bluegreen-vpc-default",
              "kubernetes.io/cluster/jenkins-bluegreen": "shared"
            },
            "vpc_id": "vpc-0d7f66dbcc350d70a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:603480426027:route-table/rtb-09c3e439ec45a5236",
            "default_route_table_id": "rtb-09c3e439ec45a5236",
            "id": "rtb-09c3e439ec45a5236",
            "owner_id": "603480426027",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "jenkins-bluegreen-vpc-default",
              "kubernetes.io/cluster/jenkins-bluegreen": "shared"
            },
            "tags_all": {
              "Name": "jenkins-bluegreen-vpc-default",
              "kubernetes.io/cluster/jenkins-bluegreen": "shared"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0d7f66dbcc350d70a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:603480426027:security-group/sg-090c7122dfe5e1e98",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-090c7122dfe5e1e98",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "603480426027",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jenkins-bluegreen-vpc-default",
              "kubernetes.io/cluster/jenkins-bluegreen": "shared"
            },
            "tags_all": {
              "Name": "jenkins-bluegreen-vpc-default",
              "kubernetes.io/cluster/jenkins-bluegreen": "shared"
            },
            "vpc_id": "vpc-0d7f66dbcc350d70a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0918ca2f12ad39e5b",
            "arn": "arn:aws:ec2:us-west-2:603480426027:elastic-ip/eipalloc-0918ca2f12ad39e5b",
            "association_id": "eipassoc-00f5f9972fcf6aaf7",
            "domain": "vpc",
            "id": "eipalloc-0918ca2f12ad39e5b",
            "network_border_group": "us-west-2",
            "network_interface": "eni-00a1613a7cfaa2df7",
            "private_dns": "ip-10-0-101-252.us-west-2.compute.internal",
            "private_ip": "10.0.101.252",
            "public_dns": "ec2-44-250-125-71.us-west-2.compute.amazonaws.com",
            "public_ip": "44.250.125.71",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "jenkins-bluegreen-vpc-us-west-2a",
              "kubernetes.io/cluster/jenkins-bluegreen": "shared"
            },
            "tags_all": {
              "Name": "jenkins-bluegreen-vpc-us-west-2a",
              "kubernetes.io/cluster/jenkins-bluegreen": "shared"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00bd4ab8b79b31e8b",
            "arn": "arn:aws:ec2:us-west-2:603480426027:elastic-ip/eipalloc-00bd4ab8b79b31e8b",
            "association_id": "eipassoc-01786150e920168ac",
            "domain": "vpc",
            "id": "eipalloc-00bd4ab8b79b31e8b",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0b8b861859429e273",
            "private_dns": "ip-10-0-102-35.us-west-2.compute.internal",
            "private_ip": "10.0.102.35",
            "public_dns": "ec2-54-203-122-28.us-west-2.compute.amazonaws.com",
            "public_ip": "54.203.122.28",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "jenkins-bluegreen-vpc-us-west-2b",
              "kubernetes.io/cluster/jenkins-bluegreen": "shared"
            },
            "tags_all": {
              "Name": "jenkins-bluegreen-vpc-us-west-2b",
              "kubernetes.io/cluster/jenkins-bluegreen": "shared"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-051d38202532c4b6a",
            "arn": "arn:aws:ec2:us-west-2:603480426027:elastic-ip/eipalloc-051d38202532c4b6a",
            "association_id": "eipassoc-093a1c5f1a3052912",
            "domain": "vpc",
            "id": "eipalloc-051d38202532c4b6a",
            "network_border_group": "us-west-2",
            "network_interface": "eni-01389bf759799243d",
            "private_dns": "ip-10-0-103-228.us-west-2.compute.internal",
            "private_ip": "10.0.103.228",
            "public_dns": "ec2-44-228-90-14.us-west-2.compute.amazonaws.com",
            "public_ip": "44.228.90.14",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "jenkins-bluegreen-vpc-us-west-2c",
              "kubernetes.io/cluster/jenkins-bluegreen": "shared"
            },
            "tags_all": {
              "Name": "jenkins-bluegreen-vpc-us-west-2c",
              "kubernetes.io/cluster/jenkins-bluegreen": "shared"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:603480426027:internet-gateway/igw-0d37d81c75f2bb0f8",
            "id": "igw-0d37d81c75f2bb0f8",
            "owner_id": "603480426027",
            "tags": {
              "Name": "jenkins-bluegreen-vpc",
              "kubernetes.io/cluster/jenkins-bluegreen": "shared"
            },
            "tags_all": {
              "Name": "jenkins-bluegreen-vpc",
              "kubernetes.io/cluster/jenkins-bluegreen": "shared"
            },
            "vpc_id": "vpc-0d7f66dbcc350d70a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0918ca2f12ad39e5b",
            "association_id": "eipassoc-00f5f9972fcf6aaf7",
            "connectivity_type": "public",
            "id": "nat-066c51cff695fa5bc",
            "network_interface_id": "eni-00a1613a7cfaa2df7",
            "private_ip": "10.0.101.252",
            "public_ip": "44.250.125.71",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a24a61fff8e16c11",
            "tags": {
              "Name": "jenkins-bluegreen-vpc-us-west-2a",
              "kubernetes.io/cluster/jenkins-bluegreen": "shared"
            },
            "tags_all": {
              "Name": "jenkins-bluegreen-vpc-us-west-2a",
              "kubernetes.io/cluster/jenkins-bluegreen": "shared"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00bd4ab8b79b31e8b",
            "association_id": "eipassoc-01786150e920168ac",
            "connectivity_type": "public",
            "id": "nat-0380ac01536152320",
            "network_interface_id": "eni-0b8b861859429e273",
            "private_ip": "10.0.102.35",
            "public_ip": "54.203.122.28",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02f11a0a1a78f1f0d",
            "tags": {
              "Name": "jenkins-bluegreen-vpc-us-west-2b",
              "kubernetes.io/cluster/jenkins-bluegreen": "shared"
            },
            "tags_all": {
              "Name": "jenkins-bluegreen-vpc-us-west-2b",
              "kubernetes.io/cluster/jenkins-bluegreen": "shared"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-051d38202532c4b6a",
            "association_id": "eipassoc-093a1c5f1a3052912",
            "connectivity_type": "public",
            "id": "nat-067e6f3457d001309",
            "network_interface_id": "eni-01389bf759799243d",
            "private_ip": "10.0.103.228",
            "public_ip": "44.228.90.14",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0921b04341b1485e0",
            "tags": {
              "Name": "jenkins-bluegreen-vpc-us-west-2c",
              "kubernetes.io/cluster/jenkins-bluegreen": "shared"
            },
            "tags_all": {
              "Name": "jenkins-bluegreen-vpc-us-west-2c",
              "kubernetes.io/cluster/jenkins-bluegreen": "shared"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e4ef062b13c1de661080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-066c51cff695fa5bc",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e4ef062b13c1de66",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-024eac0fc596ff46e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0380ac01536152320",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-024eac0fc596ff46e",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-070080f771027d0981080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-067e6f3457d001309",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-070080f771027d098",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d37d81c75f2bb0f8",
            "id": "r-rtb-0165427716339b5941080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0165427716339b594",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:603480426027:route-table/rtb-0e4ef062b13c1de66",
            "id": "rtb-0e4ef062b13c1de66",
            "owner_id": "603480426027",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-066c51cff695fa5bc",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jenkins-bluegreen-vpc-private-us-west-2a",
              "kubernetes.io/cluster/jenkins-bluegreen": "shared"
            },
            "tags_all": {
              "Name": "jenkins-bluegreen-vpc-private-us-west-2a",
              "kubernetes.io/cluster/jenkins-bluegreen": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d7f66dbcc350d70a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:603480426027:route-table/rtb-024eac0fc596ff46e",
            "id": "rtb-024eac0fc596ff46e",
            "owner_id": "603480426027",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0380ac01536152320",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jenkins-bluegreen-vpc-private-us-west-2b",
              "kubernetes.io/cluster/jenkins-bluegreen": "shared"
            },
            "tags_all": {
              "Name": "jenkins-bluegreen-vpc-private-us-west-2b",
              "kubernetes.io/cluster/jenkins-bluegreen": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d7f66dbcc350d70a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:603480426027:route-table/rtb-070080f771027d098",
            "id": "rtb-070080f771027d098",
            "owner_id": "603480426027",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-067e6f3457d001309",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jenkins-bluegreen-vpc-private-us-west-2c",
              "kubernetes.io/cluster/jenkins-bluegreen": "shared"
            },
            "tags_all": {
              "Name": "jenkins-bluegreen-vpc-private-us-west-2c",
              "kubernetes.io/cluster/jenkins-bluegreen": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d7f66dbcc350d70a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:603480426027:route-table/rtb-0165427716339b594",
            "id": "rtb-0165427716339b594",
            "owner_id": "603480426027",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d37d81c75f2bb0f8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jenkins-bluegreen-vpc-public",
              "kubernetes.io/cluster/jenkins-bluegreen": "shared"
            },
            "tags_all": {
              "Name": "jenkins-bluegreen-vpc-public",
              "kubernetes.io/cluster/jenkins-bluegreen": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d7f66dbcc350d70a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-030369009780c85fb",
            "route_table_id": "rtb-0e4ef062b13c1de66",
            "subnet_id": "subnet-00225f3dc11fd7a19"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03510768c49aecfe8",
            "route_table_id": "rtb-024eac0fc596ff46e",
            "subnet_id": "subnet-0565e51c6cd365bda"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e9bcdea9e2f5a88e",
            "route_table_id": "rtb-070080f771027d098",
            "subnet_id": "subnet-07977608bc61ec680"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee674de3d1422357",
            "route_table_id": "rtb-0165427716339b594",
            "subnet_id": "subnet-0a24a61fff8e16c11"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-040ad2e61a37d1e0b",
            "route_table_id": "rtb-0165427716339b594",
            "subnet_id": "subnet-02f11a0a1a78f1f0d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c03e397f33f4813",
            "route_table_id": "rtb-0165427716339b594",
            "subnet_id": "subnet-0921b04341b1485e0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:603480426027:subnet/subnet-00225f3dc11fd7a19",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00225f3dc11fd7a19",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "603480426027",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jenkins-bluegreen-vpc-private-us-west-2a",
              "kubernetes.io/cluster/jenkins-bluegreen": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "jenkins-bluegreen-vpc-private-us-west-2a",
              "kubernetes.io/cluster/jenkins-bluegreen": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0d7f66dbcc350d70a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:603480426027:subnet/subnet-0565e51c6cd365bda",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0565e51c6cd365bda",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "603480426027",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jenkins-bluegreen-vpc-private-us-west-2b",
              "kubernetes.io/cluster/jenkins-bluegreen": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "jenkins-bluegreen-vpc-private-us-west-2b",
              "kubernetes.io/cluster/jenkins-bluegreen": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0d7f66dbcc350d70a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:603480426027:subnet/subnet-07977608bc61ec680",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07977608bc61ec680",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "603480426027",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jenkins-bluegreen-vpc-private-us-west-2c",
              "kubernetes.io/cluster/jenkins-bluegreen": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "jenkins-bluegreen-vpc-private-us-west-2c",
              "kubernetes.io/cluster/jenkins-bluegreen": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0d7f66dbcc350d70a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:603480426027:subnet/subnet-0a24a61fff8e16c11",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a24a61fff8e16c11",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "603480426027",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jenkins-bluegreen-vpc-public-us-west-2a",
              "kubernetes.io/cluster/jenkins-bluegreen": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "jenkins-bluegreen-vpc-public-us-west-2a",
              "kubernetes.io/cluster/jenkins-bluegreen": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0d7f66dbcc350d70a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:603480426027:subnet/subnet-02f11a0a1a78f1f0d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02f11a0a1a78f1f0d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "603480426027",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jenkins-bluegreen-vpc-public-us-west-2b",
              "kubernetes.io/cluster/jenkins-bluegreen": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "jenkins-bluegreen-vpc-public-us-west-2b",
              "kubernetes.io/cluster/jenkins-bluegreen": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0d7f66dbcc350d70a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:603480426027:subnet/subnet-0921b04341b1485e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0921b04341b1485e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "603480426027",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jenkins-bluegreen-vpc-public-us-west-2c",
              "kubernetes.io/cluster/jenkins-bluegreen": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "jenkins-bluegreen-vpc-public-us-west-2c",
              "kubernetes.io/cluster/jenkins-bluegreen": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0d7f66dbcc350d70a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:603480426027:vpc/vpc-0d7f66dbcc350d70a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00001d802eac15e23",
            "default_route_table_id": "rtb-09c3e439ec45a5236",
            "default_security_group_id": "sg-090c7122dfe5e1e98",
            "dhcp_options_id": "dopt-096265c59fe62650b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d7f66dbcc350d70a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09c3e439ec45a5236",
            "owner_id": "603480426027",
            "tags": {
              "Name": "jenkins-bluegreen-vpc",
              "kubernetes.io/cluster/jenkins-bluegreen": "shared"
            },
            "tags_all": {
              "Name": "jenkins-bluegreen-vpc",
              "kubernetes.io/cluster/jenkins-bluegreen": "shared"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}